--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,12 @@
-.header-container{
-    background: #290742;
-    padding: 68px 135px;
+.header-bg{
+    background-color: #290742;
+    background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png");
+    padding: 68px 0px;
     border-bottom: 6px solid #4FFF4B;
+}
+.header-container{
+    max-width: 1171px;
+    margin: 0 auto;
 }
 .header-container header{
     display: flex;
